mudei algumas coisas

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <link rel="stylesheet" href="/Prova-html-css/assest/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="container">
+    <div class="container">
         <div class="div1">
             <h1 class="title">[Ebook] Guia do HTML e CSS</h1>
             <p class="text">Dê seus primeiros passos com desenvolvimento Web e aprenda a criar uma página do ZERO!</p>
@@ -18,12 +18,12 @@
             <div class="div2">
                 <h2 class="title-form">Faça o download grátis aqui</h2>
                 <p class="text-form">Preencha o formulário abaixo para acessar o ebook</p>
-                <label class="label">Nome*</label>
-                <input class="input" type="text" name="name" id="name">
-                <label class="label">Email*</label>
-                <input class="input" type="email" name="email" id="email">
-                <label class="label">Profissionalmente, você se consedera.*</label>
-                <select class="select" name="item" id="item">
+                <label class="label">Nome</label>
+                <input class="input" type="text" name="name" id="name" require placeholder="Nome">
+                <label class="label">Email</label>
+                <input class="input" type="email" name="email" id="email"require placeholder="Email">
+                <label class="label">Profissionalmente, você se consedera.</label>
+                <select class="select" name="item" id="item" required>
                     <option value="Selecione">Selecione</option>
                     <option value="junior">Junior</option>
                     <option value="master">Master</option>
@@ -36,16 +36,22 @@
                     <option value="BE">Back-end</option>
                 </select>
                 <label class="label">Você possui interesse em iniciar um curso online?*</label>
-                <input type="radio" name="positivo" value="Sim">
-                <span>Sim</span>
-                <input class="input" type="radio" name="negativo" value="Não">
-                <span>Não</span>
-                <label class="label">7 + 8 = ?</label>
-                <input class="input" type="text" name="number" id="number">
+                <div>
+                    <input type="radio" name="positivo" value="Sim">
+                    <span>Sim</span>
+                </div>
+                <div>
+                    <input class="input" type="radio" name="negativo" value="Não">
+                    <span>Não</span>
+                </div>
+                <div>
+                    <label class="label">7 + 8 = ?</label>
+                    <input class="input" type="number" name="number" id="number">
+                </div>
                 <button class="button">Aprender HTML e CSS agora!</button>
                 <span class="span-text">Prometemos não utilizar suas informações de contato pra enviar qualquer tipo de SPAN</span>
             </div>
         </form>
-    </main>
+    </div>
 </body>
 </html>
